<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView 
        android:layout_width="fill_parent"   
        android:layout_height="wrap_content"
        >      
        <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@drawable/corners_bg_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"> 
        
        <!-- Type -->    
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"    
            android:textSize="20dp"
            android:textColor="#FF00FF"
            android:text="@string/type"/>
        <LinearLayout 
            android:orientation="vertical"
            android:padding="2dp"
            android:background="@drawable/corners_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/corners_bg_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- ////// -->
            <TableLayout android:id="@+id/TableLayout01"
            android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TableRow android:id="@+id/TableRow01" android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_marginTop = "5pt">
            <RadioGroup android:layout_height="fill_parent" android:layout_width="fill_parent" 
            android:orientation="vertical" android:id="@+id/reader_type_group">
                <RadioButton android:layout_height="wrap_content" android:id="@+id/reader_type_group_item1" android:text="@string/reader_type_felica" 
                                    android:layout_weight="1" android:layout_width="fill_parent" />
                <RadioButton android:layout_height="wrap_content" android:id="@+id/reader_type_group_item2" android:text="@string/reader_type_14443a" 
                                    android:layout_weight="1" android:layout_width="fill_parent" />
                <RadioButton android:layout_height="wrap_content" android:id="@+id/reader_type_group_item3" android:text="@string/reader_type_type1" 
                                    android:layout_weight="1" android:layout_width="fill_parent" />
                <RadioButton android:layout_height="wrap_content" android:id="@+id/reader_type_group_item4" android:text="@string/reader_type_15693" 
                                    android:layout_weight="1" android:layout_width="fill_parent" />
                <RadioButton android:layout_height="wrap_content" android:id="@+id/reader_type_group_item5" android:text="@string/reader_type_p2p_i" 
                                    android:layout_weight="1" android:layout_width="fill_parent" />
                <RadioButton android:layout_height="wrap_content" android:id="@+id/reader_type_group_item6" android:text="@string/reader_type_p2p_t" 
                                    android:layout_weight="1" android:layout_width="fill_parent" />                                      
            </RadioGroup>
            </TableRow>         
            </TableLayout>  
        </LinearLayout>     
        </LinearLayout>     
           
        <!-- Command-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#FF00FF"
            android:text="@string/command"/>
        <LinearLayout
            android:orientation="vertical"
            android:padding="2dp"
            android:background="@drawable/corners_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/corners_bg_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- ////// -->
            <TableLayout android:id="@+id/TableLayout02"
            android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TableRow android:id="@+id/TableRow02" android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_marginTop = "5pt">
            <RadioGroup android:layout_height="fill_parent" android:layout_width="fill_parent"
            android:orientation="vertical" android:id="@+id/reader_command_group">
                <RadioButton android:layout_height="wrap_content" android:id="@+id/reader_command_group_item1" android:text="@string/polling_loop"
                                    android:layout_weight="1" android:layout_width="fill_parent" />
                <RadioButton android:layout_height="wrap_content" android:id="@+id/reader_command_group_item2" android:text="@string/single_polling"
                                    android:layout_weight="1" android:layout_width="fill_parent" />
            </RadioGroup>
            </TableRow>
            </TableLayout>
        </LinearLayout>
        </LinearLayout>

        <!-- Single Polling Times-->
        <LinearLayout
            android:id="@+id/single_polling_times_view"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#FF00FF"
            android:text="@string/times"/>
        <LinearLayout
            android:orientation="vertical"
            android:padding="2dp"
            android:background="@drawable/corners_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/corners_bg_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- ////// -->
            <EditText android:id="@+id/single_polling_times_edit"
                android:numeric="integer"
                android:layout_height="wrap_content" 
                android:layout_width="match_parent"
                android:text="@string/default_times" />
        </LinearLayout>
        </LinearLayout>
        </LinearLayout>

        <!-- Result-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#FF00FF"
            android:text="@string/result"/>
        <LinearLayout
            android:orientation="vertical"
            android:padding="2dp"
            android:background="@drawable/corners_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/corners_bg_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- ////// -->
            <TextView android:id="@+id/single_polling_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/empty"/>
        </LinearLayout>
        </LinearLayout>

        <Button android:id="@+id/reader_test_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="20dip"/>

        <Button android:id="@+id/reader_test_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:textSize="20dip"/>         
    </LinearLayout>    
    </ScrollView>
</LinearLayout>

