<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView 
        android:layout_width="fill_parent"   
        android:layout_height="wrap_content"
        >      
        <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@drawable/corners_bg_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"> 
        
        <!-- Type -->    
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"    
            android:textSize="20dp"
            android:textColor="#FF00FF"
            android:text="@string/type"/>
        <LinearLayout 
            android:orientation="vertical"
            android:padding="2dp"
            android:background="@drawable/corners_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/corners_bg_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- ////// -->
            <TableLayout android:id="@+id/TableLayout01"
            android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TableRow android:id="@+id/TableRow01" android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_marginTop = "5pt">
            <RadioGroup android:layout_height="fill_parent" android:layout_width="fill_parent" 
            android:orientation="vertical" android:id="@+id/card_mode_type_group">
                <RadioButton android:layout_height="wrap_content" android:id="@+id/card_mode_type_group_item1" android:text="@string/card_mode_type_A" 
                                    android:layout_weight="1" android:layout_width="fill_parent" />
                <RadioButton android:layout_height="wrap_content" android:id="@+id/card_mode_type_group_item2" android:text="@string/card_mode_type_B" 
                                    android:layout_weight="1" android:layout_width="fill_parent" />
                <RadioButton android:layout_height="wrap_content" android:id="@+id/card_mode_type_group_item3" android:text="@string/card_mode_type_AB" 
                                    android:layout_weight="1" android:layout_width="fill_parent" />                                    
            </RadioGroup>
            </TableRow>         
            </TableLayout>  
        </LinearLayout>     
        </LinearLayout>     
           
        <Button android:id="@+id/card_mode_test_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="20dip"/>

        <Button android:id="@+id/card_mode_test_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:textSize="20dip"/>     

        <!-- Polling Info.-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#FF00FF"
            android:text="@string/result"/>
        <LinearLayout
            android:orientation="vertical"
            android:padding="2dp"
            android:background="@drawable/corners_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/corners_bg_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- ////// -->
            <TextView android:id="@+id/card_mode_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/empty"/>
        </LinearLayout>
        </LinearLayout>
        
        <Button android:id="@+id/get_polling_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/polling_info"
                android:textSize="20dip"/>
    
    </LinearLayout>    
    </ScrollView>
</LinearLayout>

