<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView 
    	android:layout_width="fill_parent"   
    	android:layout_height="wrap_content"
		>
        <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@drawable/corners_bg_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"> 
        
        <!-- Result-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#FF00FF"
            android:text="@string/polling_info"/>
        <LinearLayout
            android:orientation="vertical"
            android:padding="2dp"
            android:background="@drawable/corners_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/corners_bg_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- ////// -->
            <TextView android:id="@+id/polling_info_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/empty"/>
        </LinearLayout>
        </LinearLayout>

        <Button android:id="@+id/firmware_info_start"
        	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="20dip"/>

        <Button android:id="@+id/firmware_info_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textSize="20dip"/> 
            
    </LinearLayout>         
	</ScrollView>	
</LinearLayout>



